--- a/playlists/ritmo-caliente/index.html
+++ b/playlists/ritmo-caliente/index.html
@@ -8,16 +8,16 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   
   
-  <link rel="stylesheet" href="../../styles.css" integrity="" media="screen">
+  <link rel="stylesheet" href="/styles.css" integrity="" media="screen">
 </head>
 <body>
 
   
     <nav role="navigation">
       <i class="navtoggle fas fa-bars hidden" id="navToggle"></i>
-<a class="navbar-brand" href="../../">Playmore Music</a>
+<a class="navbar-brand" href="/">Playmore Music</a>
 <ul class="navigation hide-small" id="navExpand">
-  <li><a href="../../">Home</li><li><a class="" href="../../pricing/">Plans and Pricing</a></li><li><a class="" href="../../playlists/">Playlists</a></li></ul>
+  <li><a href="/">Home</li><li><a class="" href="/pricing/">Plans and Pricing</a></li><li><a class="" href="/playlists/">Playlists</a></li></ul>
 </nav>
 
   
@@ -46,8 +46,8 @@
       </div>
 
       <div class="row space-between">
-        <a href="../../playlists/my-favorite-hits/" class="button">Previous</a>
-        <a href="../../playlists/star-stage/" class="button">Next</a>
+        <a href="/playlists/my-favorite-hits/" class="button">Previous</a>
+        <a href="/playlists/star-stage/" class="button">Next</a>
       </div>
     </div>
 
