--- a/pricing/index.html
+++ b/pricing/index.html
@@ -8,16 +8,16 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   
   
-  <link rel="stylesheet" href="../styles.css" integrity="" media="screen">
+  <link rel="stylesheet" href="/styles.css" integrity="" media="screen">
 </head>
 <body>
 
   
     <nav role="navigation">
       <i class="navtoggle fas fa-bars hidden" id="navToggle"></i>
-<a class="navbar-brand" href="../">Playmore Music</a>
+<a class="navbar-brand" href="/">Playmore Music</a>
 <ul class="navigation hide-small" id="navExpand">
-  <li><a href="../">Home</li><li><a class="active" href="../pricing/">Plans and Pricing</a></li><li><a class="" href="../playlists/">Playlists</a></li></ul>
+  <li><a href="/">Home</li><li><a class="active" href="/pricing/">Plans and Pricing</a></li><li><a class="" href="/playlists/">Playlists</a></li></ul>
 </nav>
 
   
@@ -42,7 +42,7 @@
                   <p>Get your business-legal music up and running with a selection of non label music and limited playlists.</p>
                   <center>
                     <a class="button" href="pricing/starter">Details</a>
-                    <a class="button" href="../sign-up">Sign Up</a>
+                    <a class="button" href="/sign-up">Sign Up</a>
                   </center>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                   <p>Get all the benefits of our licensed business music solution. Select from a large range of playlists, get streaming solutions and more.</p>
                   <center>
                     <a class="button" href="pricing/premium">Details</a>
-                    <a class="button" href="../sign-up">Sign Up</a>
+                    <a class="button" href="/sign-up">Sign Up</a>
                   </center>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                   <p>Although you can use your plan with the hardware you already own, upgrading to a CUBE player for your business music will provide you with superior security and reliability across the board.</p>
                   <center>
                     <a class="button" href="pricing/cube-player">Details</a>
-                    <a class="button" href="../sign-up">Sign Up</a>
+                    <a class="button" href="/sign-up">Sign Up</a>
                   </center>
                 </div>
             </div>
