--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no shrink-to-fit=no">
   <title>PlaymoreProto</title>
-  <base href="">
+  <base href="./">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   
   
-  <link rel="stylesheet" href="/styles.css" integrity="" media="screen">
+  <link rel="stylesheet" href="./sass/style.css" integrity="" media="screen">
 </head>
 <body>
 
   
     <nav role="navigation">
       <i class="navtoggle fas fa-bars hidden" id="navToggle"></i>
-<a class="navbar-brand" href="/">Playmore Music</a>
+<a class="navbar-brand" href="./">Playmore Music</a>
 <ul class="navigation hide-small" id="navExpand">
-  <li><a href="/">Home</li><li><a class="" href="/pricing/">Plans and Pricing</a></li><li><a class="" href="/playlists/">Playlists</a></li></ul>
+  <li><a href="./">Home</li><li><a class="" href="./pricing/">Plans and Pricing</a></li><li><a class="" href="./playlists/">Playlists</a></li></ul>
 </nav>
 
   
@@ -31,7 +31,7 @@
   <img src="../images/transparent-blocks-3.png" alt="some seo friendly text here">
   <h1 class=h3>Get set up in 5 minutes or less with 100% business legal music for as low as $8.99/month!</h1>
   <h2 class="h5">Eliminate your business risk while paying music makers legal and fair compensation</h2>
-  <a href="/pricing" class="button">View Plans</a>
+  <a href="./pricing" class="button">View Plans</a>
 </section>
 
 
