changed urls in data files and added urlize function to templates to see if this sorts out the url problem

--- a/playlists/my-favorite-hits/index.html
+++ b/playlists/my-favorite-hits/index.html
@@ -38,7 +38,7 @@
 
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
-      <img src="../images/playlists/my-favorite-hits.png">
+      <img src="../../images/playlists/my-favorite-hits.png">
       <p>My Favorite Hits is an upbeat mix of today’s hit music for adults, plus songs from the 80’s and 90’s that sound fresh and relevant. This playlist is audience-tested to ensure adults 25&#43; will enjoy every song. Our most popular playlist!</p>
       <p>Includes Artists: Taylor Swift, John Legend, Kelly Clarkson, Train, Katy Perry</p>
       <div style="background-color: yellow" class="lyric-filter">
