--- a/playlists/top-beats/index.html
+++ b/playlists/top-beats/index.html
@@ -38,7 +38,7 @@
 
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
-      <img src="../images/playlists/top-beats.png">
+      <img src="../../images/playlists/top-beats.png">
       <p>Chart-topping pop hits of today along with the fresh beats of the best dance tracks. New, now and full of energy.</p>
       <p>Includes Artists: Chainsmokers, Justin Bieber, Kaskade, Ariana Grande, Seven Lions, The Weeknd, Kygo</p>
       <div style="background-color: orange" class="lyric-filter">
