--- a/pricing/index.html
+++ b/pricing/index.html
@@ -42,7 +42,7 @@
                   <p>Get your business-legal music up and running with a selection of non label music and limited playlists.</p>
                   <center>
                     <a class="button" href="pricing/starter">Details</a>
-                    <a class="button" href="../sign-up">Sign Up</a>
+                    <a class="button">Sign Up</a>
                   </center>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                   <p>Get all the benefits of our licensed business music solution. Select from a large range of playlists, get streaming solutions and more.</p>
                   <center>
                     <a class="button" href="pricing/premium">Details</a>
-                    <a class="button" href="../sign-up">Sign Up</a>
+                    <a class="button">Sign Up</a>
                   </center>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                   <p>Although you can use your plan with the hardware you already own, upgrading to a CUBE player for your business music will provide you with superior security and reliability across the board.</p>
                   <center>
                     <a class="button" href="pricing/cube-player">Details</a>
-                    <a class="button" href="../sign-up">Sign Up</a>
+                    <a class="button">Sign Up</a>
                   </center>
                 </div>
             </div>
