--- a/pricing/index.html
+++ b/pricing/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no shrink-to-fit=no">
   <title>Plans and Pricing</title>
-  <base href="">
+  <base href="https://leactz.github.io/PlaymoreMusicPrototype/">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   
   
-  <link rel="stylesheet" href="../css/styles.css" integrity="" media="screen">
+  <link rel="stylesheet" href="../PlaymoreMusicPrototype/css/styles.css" integrity="" media="screen">
 </head>
 <body>
 
@@ -17,7 +17,7 @@
       <i class="navtoggle fas fa-bars hidden" id="navToggle"></i>
 <a class="navbar-brand" href="../">Playmore Music</a>
 <ul class="navigation hide-small" id="navExpand">
-  <li><a href="../">Home</li><li><a class="active" href="../pricing/">Plans and Pricing</a></li><li><a class="" href="../playlists/">Playlists</a></li></ul>
+  <li><a href="../">Home</li><li><a class="active" href="../PlaymoreMusicPrototype/pricing/">Plans and Pricing</a></li><li><a class="" href="../PlaymoreMusicPrototype/playlists/">Playlists</a></li></ul>
 </nav>
 
   
@@ -41,7 +41,7 @@
                   <h3 class="h5">$8.99/month</h3>
                   <p>Get your business-legal music up and running with a selection of non label music and limited playlists.</p>
                   <center>
-                    <a class="button" href="pricing/starter">Details</a>
+                    <a class="button" href="../pricing/starter">Details</a>
                     <a class="button">Sign Up</a>
                   </center>
                 </div>
@@ -58,7 +58,7 @@
                   <h3 class="h5">$18.99/month</h3>
                   <p>Get all the benefits of our licensed business music solution. Select from a large range of playlists, get streaming solutions and more.</p>
                   <center>
-                    <a class="button" href="pricing/premium">Details</a>
+                    <a class="button" href="../pricing/premium">Details</a>
                     <a class="button">Sign Up</a>
                   </center>
                 </div>
@@ -75,7 +75,7 @@
                   <h3 class="h5">$199 once-off</h3>
                   <p>Although you can use your plan with the hardware you already own, upgrading to a CUBE player for your business music will provide you with superior security and reliability across the board.</p>
                   <center>
-                    <a class="button" href="pricing/cube-player">Details</a>
+                    <a class="button" href="../pricing/cube-player">Details</a>
                     <a class="button">Sign Up</a>
                   </center>
                 </div>
