--- a/pricing/starter/index.html
+++ b/pricing/starter/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no shrink-to-fit=no">
   <title>Starter</title>
-  <base href="https://leactz.github.io/PlaymoreMusicPrototype/">
+  <base href="">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   
   
-  <link rel="stylesheet" href="../../PlaymoreMusicPrototype/css/styles.css" integrity="" media="screen">
+  <link rel="stylesheet" href="../../css/styles.css" integrity="" media="screen">
 </head>
 <body>
 
@@ -17,7 +17,7 @@
       <i class="navtoggle fas fa-bars hidden" id="navToggle"></i>
 <a class="navbar-brand" href="../../">Playmore Music</a>
 <ul class="navigation hide-small" id="navExpand">
-  <li><a href="../../">Home</li><li><a class="" href="../../PlaymoreMusicPrototype/pricing/">Plans and Pricing</a></li><li><a class="" href="../../PlaymoreMusicPrototype/playlists/">Playlists</a></li></ul>
+  <li><a href="../../">Home</li><li><a class="" href="../../pricing/">Plans and Pricing</a></li><li><a class="" href="../../playlists/">Playlists</a></li></ul>
 </nav>
 
   
@@ -74,8 +74,10 @@
   integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30="
   crossorigin="anonymous"></script>
   
-  <script src="../js/carousel.js"></script>
-  <script src="../js/main.js"></script>
+  
+  
+  
+  <script src="../../js/bundle.js"></script>
 
 
 
