moved playlist images into playlists section as page resources. changed url in the data file to point to the page resource file.

--- a/playlists/index.html
+++ b/playlists/index.html
@@ -33,7 +33,7 @@
           <li class="card-instance">
             <a href="../playlists/mass-appeal">
             <figure class="card playlist-card on-light">
-              <img src="../../images/playlists/mass-appeal.png">
+              <img src="playlists/mass-appeal.png">
               <figcaption>
                 <h2 class="h6">Mass Appeal</h2>
                 <p>Top 40</p>
@@ -46,7 +46,7 @@
           <li class="card-instance">
             <a href="../playlists/mega-jamz">
             <figure class="card playlist-card on-light">
-              <img src="../../images/playlists/mega-jamz.png">
+              <img src="playlists/mega-jamz.png">
               <figcaption>
                 <h2 class="h6">Mega Jamz</h2>
                 <p>Top 40 and Urban Contemporary</p>
@@ -59,7 +59,7 @@
           <li class="card-instance">
             <a href="../playlists/my-favorite-hits">
             <figure class="card playlist-card on-light">
-              <img src="../../images/playlists/my-favorite-hits.png">
+              <img src="playlists/my-favorite-hits.png">
               <figcaption>
                 <h2 class="h6">My Favorite Hits</h2>
                 <p>Adult Contemporary</p>
@@ -72,7 +72,7 @@
           <li class="card-instance">
             <a href="../playlists/now-pop">
             <figure class="card playlist-card on-light">
-              <img src="../../images/playlists/generic-budgetlist.png">
+              <img src="playlists/generic-budgetlist.png">
               <figcaption>
                 <h2 class="h6">Now Pop</h2>
                 <p>Confident Melodies</p>
@@ -85,7 +85,7 @@
           <li class="card-instance">
             <a href="../playlists/ritmo-caliente">
             <figure class="card playlist-card on-light">
-              <img src="../../images/playlists/ritmo-caliente.png">
+              <img src="playlists/ritmo-caliente.png">
               <figcaption>
                 <h2 class="h6">Ritmo Caliente</h2>
                 <p>Latin Contemporary and Top 40</p>
@@ -98,7 +98,7 @@
           <li class="card-instance">
             <a href="../playlists/star-stage">
             <figure class="card playlist-card on-light">
-              <img src="../../images/playlists/star-stage.png">
+              <img src="playlists/star-stage.png">
               <figcaption>
                 <h2 class="h6">Star Stage</h2>
                 <p>Alternative and Top 40</p>
@@ -111,7 +111,7 @@
           <li class="card-instance">
             <a href="../playlists/the-mix">
             <figure class="card playlist-card on-light">
-              <img src="../../images/playlists/the-mix.png">
+              <img src="playlists/the-mix.png">
               <figcaption>
                 <h2 class="h6">The Mix</h2>
                 <p>Adult Contemporary and Top 40</p>
@@ -124,7 +124,7 @@
           <li class="card-instance">
             <a href="../playlists/top-beats">
             <figure class="card playlist-card on-light">
-              <img src="../../images/playlists/top-beats.png">
+              <img src="playlists/top-beats.png">
               <figcaption>
                 <h2 class="h6">Top Beats</h2>
                 <p>Dance and Top 40</p>
