--- a/playlists/mass-appeal/index.html
+++ b/playlists/mass-appeal/index.html
@@ -38,7 +38,7 @@
 
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
-      <img src="../../images/playlists/mass-appeal.png">
+      <img src="playlists/mass-appeal.png">
       <p>If it’s new and now, it&#39;s on Mass Appeal. It features the most listened to, most downloaded, most wanted songs in this playlist full of back-to-back hits. Freshly picked chart-toppers delivered hot from the studios and stages by today’s pop artists.</p>
       <p>Includes Artists: Sam Smith, Mark Ronson, Ed Sheeran, Nick Jonas, Maroon 5, Fall Out Boy, Kelly Clarkson, Hozier, Meghan Trainor</p>
       <div style="background-color: orange" class="lyric-filter">
