--- a/playlists/ritmo-caliente/index.html
+++ b/playlists/ritmo-caliente/index.html
@@ -38,7 +38,7 @@
 
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
-      <img src="../../images/playlists/ritmo-caliente.png">
+      <img src="playlists/ritmo-caliente.png">
       <p>The fusion of today&#39;s biggest pop performers with the best of English language and Spanish language songs. A culture-inclusive mix of what is happening in music today.</p>
       <p>Includes Artists: Justin Bieber, Daddy Yankee, Fifth Harmony, Nicky Jam</p>
       <div style="background-color: orange" class="lyric-filter">
