--- a/playlists/star-stage/index.html
+++ b/playlists/star-stage/index.html
@@ -38,7 +38,7 @@
 
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
-      <img src="../../images/playlists/star-stage.png">
+      <img src="playlists/star-stage.png">
       <p>Today&#39;s alternative and Indie stars join today&#39;s pop chart-toppers, all in one playlist. It&#39;s the best of both worlds.</p>
       <p>Includes Artists: Fitz and the Tantrums, Twenty One Pilots, Chvrches, Ariana Grande, Justin Bieber, Beyonce</p>
       <div style="background-color: orange" class="lyric-filter">
