--- a/playlists/the-mix/index.html
+++ b/playlists/the-mix/index.html
@@ -38,7 +38,7 @@
 
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
-      <img src="../../images/playlists/the-mix.png">
+      <img src="playlists/the-mix.png">
       <p>Today&#39;s hottest hits appealing to adults 18-54 mixed with pop hits from the 90&#39;s and early 2k. This playlist has something for every pop music fan</p>
       <p>Includes Artists: Ariana Grande, Michael Buble, Lady Gaga</p>
       <div style="background-color: orange" class="lyric-filter">
