--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
         <a href="./playlists/mass-appeal">
-          <img src="../../images/playlists/mass-appeal.png">
+          <img src="playlists/mass-appeal.png">
           <figcaption>
             <h2 class="h6">Mass Appeal</h2>
             <p>Top 40</p>
@@ -112,7 +112,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
         <a href="./playlists/my-favorite-hits">
-          <img src="../../images/playlists/my-favorite-hits.png">
+          <img src="playlists/my-favorite-hits.png">
           <figcaption>
             <h2 class="h6">My Favorite Hits</h2>
             <p>Adult Contemporary</p>
@@ -132,7 +132,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
         <a href="./playlists/ritmo-caliente">
-          <img src="../../images/playlists/ritmo-caliente.png">
+          <img src="playlists/ritmo-caliente.png">
           <figcaption>
             <h2 class="h6">Ritmo Caliente</h2>
             <p>Latin Contemporary and Top 40</p>
@@ -147,7 +147,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
         <a href="./playlists/star-stage">
-          <img src="../../images/playlists/star-stage.png">
+          <img src="playlists/star-stage.png">
           <figcaption>
             <h2 class="h6">Star Stage</h2>
             <p>Alternative and Top 40</p>
@@ -162,7 +162,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
         <a href="./playlists/the-mix">
-          <img src="../../images/playlists/the-mix.png">
+          <img src="playlists/the-mix.png">
           <figcaption>
             <h2 class="h6">The Mix</h2>
             <p>Adult Contemporary and Top 40</p>
@@ -177,7 +177,7 @@
       <li class="card-instance carousel-item">
         <figure class="card feature-card on-dark">
         <a href="./playlists/top-beats">
-          <img src="../../images/playlists/top-beats.png">
+          <img src="playlists/top-beats.png">
           <figcaption>
             <h2 class="h6">Top Beats</h2>
             <p>Dance and Top 40</p>
