changed url delivery for images from templates via data files again.

--- a/playlists/mega-jamz/index.html
+++ b/playlists/mega-jamz/index.html
@@ -38,7 +38,7 @@
 
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
-      <img src="playlists/mega-jamz.png">
+      <img src="../../playlists/mega-jamz.png">
       <p>This is where pop meets the street beat. Today&#39;s biggest pop hits along with today&#39;s urban hits, combined for a power playlist of hits for those needing an urban accent to their retail environment.</p>
       <p>Includes Artists: The Weeknd, Flo Rida, Kanye West, Rihanna</p>
       <div style="background-color: orange" class="lyric-filter">
