--- a/playlists/now-pop/index.html
+++ b/playlists/now-pop/index.html
@@ -38,7 +38,7 @@
 
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
-      <img src="playlists/generic-budgetlist.png">
+      <img src="../../playlists/generic-budgetlist.png">
       <p>confident melodies, huge and perfectly pitched choruses and catchy hooks, offering a fresh and accessible contemporary sound.</p>
       
       <div style="background-color: " class="lyric-filter">
