fixed url hook for jumbotron image

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
  
 
   <section class="jumbotron">
-  <img src="../images/transparent-blocks-3.png" alt="some seo friendly text here">
+  <img src="images/transparent-blocks-3.png" alt="some seo friendly text here">
   <h1 class=h3>Get set up in 5 minutes or less with 100% business legal music for as low as $8.99/month!</h1>
   <h2 class="h5">Eliminate your business risk while paying music makers legal and fair compensation</h2>
   <a href="./pricing" class="button">View Plans</a>
