added new playlists, added a premium star indicator to premium playlists in playlist list

--- a/playlists/indie-days/index.html
+++ b/playlists/indie-days/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no shrink-to-fit=no">
-  <title>Mega Jamz</title>
+  <title>Indie Days</title>
   <base href="">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   
@@ -28,27 +28,27 @@
 
   
     <div class="jumbo-title">
-      <h1 class="h3 inverse shadow">Mega Jamz</h1>
+      <h1 class="h3 inverse shadow">Indie Days</h1>
     </div>
 
-    <h2 class="h4">Top 40 and Urban Contemporary</h2>
+    <h2 class="h4">Stylish and Edgy</h2>
 
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
-      <img src="../../playlists/mega-jamz.png">
-      <p>This is where pop meets the street beat. Today&#39;s biggest pop hits along with today&#39;s urban hits, combined for a power playlist of hits for those needing an urban accent to their retail environment.<br><br></p>
-      <p class="artist-list">Includes Artists: The Weeknd, Flo Rida, Kanye West, Rihanna</p>
+      <img src="../../playlists/indie-days.png">
+      <p>A stylish and edgy channel for trendsetters and unique spirited souls, built on a blend of indie pop, dance, electronica, nu disco and neo soul.<br><br>The future, today! Drawing inspiration from cities such as Paris, Tokyo and LA, these select sounds ooze avant-garde. Covering several genres such as indie pop,  electronica and soft house, the songs are no short on character yet maintain an intensity level matching the latest interior design and perfect t-shirts.</p>
+      
       <p class="h5">
-        Plan: Premium 
+        
       </p>
-      <div style="background-color: orange" class="lyric-filter">
-        <p>Lyrics Filter: orange</p>
+      <div style="background-color: " class="lyric-filter">
+        <p></p>
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
-        <a href="../../playlists/now-pop/" class="button">Previous</a>
+        <a href="" class="button">Previous</a>
         <a href="../../playlists/" class="button">All</a>
-        <a href="../../playlists/top-beats/" class="button">Next</a>
+        <a href="../../playlists/jazz-classics/" class="button">Next</a>
       </div>
 
     </div>
