--- a/playlists/mass-appeal/index.html
+++ b/playlists/mass-appeal/index.html
@@ -30,29 +30,28 @@
     <div class="jumbo-title">
       <h1 class="h3 inverse shadow">Mass Appeal</h1>
     </div>
-    <h2 class="h4">Top 40</h2>
-    <h3 class="h5">
-      Plan: Premium 
-    </h3>
 
+    <h2 class="h4">Top 40</h2>
 
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
       <img src="../../playlists/mass-appeal.png">
-      <p>If it’s new and now, it&#39;s on Mass Appeal. It features the most listened to, most downloaded, most wanted songs in this playlist full of back-to-back hits. Freshly picked chart-toppers delivered hot from the studios and stages by today’s pop artists.</p>
-      <p>Includes Artists: Sam Smith, Mark Ronson, Ed Sheeran, Nick Jonas, Maroon 5, Fall Out Boy, Kelly Clarkson, Hozier, Meghan Trainor</p>
+      <p>If it’s new and now, it&#39;s on Mass Appeal. It features the most listened to, most downloaded, most wanted songs in this playlist full of back-to-back hits. Freshly picked chart-toppers delivered hot from the studios and stages by today’s pop artists.<br><br></p>
+      <p class="artist-list">Includes Artists: Sam Smith, Mark Ronson, Ed Sheeran, Nick Jonas, Maroon 5, Fall Out Boy, Kelly Clarkson, Hozier, Meghan Trainor</p>
+      <p class="h5">
+        Plan: Premium 
+      </p>
       <div style="background-color: orange" class="lyric-filter">
         <p>Lyrics Filter: orange</p>
       </div>
-
-      <div class="row space-between">
+      <div style="height: 3rem"></div>
+      <div class="row space-around">
         <a href="../../playlists/top-beats/" class="button">Previous</a>
+        <a href="../../playlists/" class="button">All</a>
         <a href="../../playlists/my-favorite-hits/" class="button">Next</a>
       </div>
+
     </div>
-
-
-
 
 
 
