--- a/playlists/my-favorite-hits/index.html
+++ b/playlists/my-favorite-hits/index.html
@@ -30,29 +30,28 @@
     <div class="jumbo-title">
       <h1 class="h3 inverse shadow">My Favorite Hits</h1>
     </div>
-    <h2 class="h4">Adult Contemporary</h2>
-    <h3 class="h5">
-      Plan: Premium 
-    </h3>
 
+    <h2 class="h4">Adult Contemporary</h2>
 
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
       <img src="../../playlists/my-favorite-hits.png">
-      <p>My Favorite Hits is an upbeat mix of today’s hit music for adults, plus songs from the 80’s and 90’s that sound fresh and relevant. This playlist is audience-tested to ensure adults 25&#43; will enjoy every song. Our most popular playlist!</p>
-      <p>Includes Artists: Taylor Swift, John Legend, Kelly Clarkson, Train, Katy Perry</p>
+      <p>My Favorite Hits is an upbeat mix of today’s hit music for adults, plus songs from the 80’s and 90’s that sound fresh and relevant. This playlist is audience-tested to ensure adults 25&#43; will enjoy every song. Our most popular playlist!<br><br></p>
+      <p class="artist-list">Includes Artists: Taylor Swift, John Legend, Kelly Clarkson, Train, Katy Perry</p>
+      <p class="h5">
+        Plan: Premium 
+      </p>
       <div style="background-color: yellow" class="lyric-filter">
         <p>Lyrics Filter: yellow</p>
       </div>
-
-      <div class="row space-between">
+      <div style="height: 3rem"></div>
+      <div class="row space-around">
         <a href="../../playlists/mass-appeal/" class="button">Previous</a>
+        <a href="../../playlists/" class="button">All</a>
         <a href="../../playlists/ritmo-caliente/" class="button">Next</a>
       </div>
+
     </div>
-
-
-
 
 
 
