--- a/playlists/star-stage/index.html
+++ b/playlists/star-stage/index.html
@@ -30,29 +30,28 @@
     <div class="jumbo-title">
       <h1 class="h3 inverse shadow">Star Stage</h1>
     </div>
-    <h2 class="h4">Alternative and Top 40</h2>
-    <h3 class="h5">
-      Plan: Premium 
-    </h3>
 
+    <h2 class="h4">Alternative and Top 40</h2>
 
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
       <img src="../../playlists/star-stage.png">
-      <p>Today&#39;s alternative and Indie stars join today&#39;s pop chart-toppers, all in one playlist. It&#39;s the best of both worlds.</p>
-      <p>Includes Artists: Fitz and the Tantrums, Twenty One Pilots, Chvrches, Ariana Grande, Justin Bieber, Beyonce</p>
+      <p>Today&#39;s alternative and Indie stars join today&#39;s pop chart-toppers, all in one playlist. It&#39;s the best of both worlds.<br><br></p>
+      <p class="artist-list">Includes Artists: Fitz and the Tantrums, Twenty One Pilots, Chvrches, Ariana Grande, Justin Bieber, Beyonce</p>
+      <p class="h5">
+        Plan: Premium 
+      </p>
       <div style="background-color: orange" class="lyric-filter">
         <p>Lyrics Filter: orange</p>
       </div>
-
-      <div class="row space-between">
+      <div style="height: 3rem"></div>
+      <div class="row space-around">
         <a href="../../playlists/ritmo-caliente/" class="button">Previous</a>
+        <a href="../../playlists/" class="button">All</a>
         <a href="../../playlists/the-mix/" class="button">Next</a>
       </div>
+
     </div>
-
-
-
 
 
 
