--- a/playlists/top-beats/index.html
+++ b/playlists/top-beats/index.html
@@ -30,29 +30,28 @@
     <div class="jumbo-title">
       <h1 class="h3 inverse shadow">Top Beats</h1>
     </div>
-    <h2 class="h4">Dance and Top 40</h2>
-    <h3 class="h5">
-      Plan: Premium 
-    </h3>
 
+    <h2 class="h4">Dance and Top 40</h2>
 
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
       <img src="../../playlists/top-beats.png">
-      <p>Chart-topping pop hits of today along with the fresh beats of the best dance tracks. New, now and full of energy.</p>
-      <p>Includes Artists: Chainsmokers, Justin Bieber, Kaskade, Ariana Grande, Seven Lions, The Weeknd, Kygo</p>
+      <p>Chart-topping pop hits of today along with the fresh beats of the best dance tracks. New, now and full of energy.<br><br></p>
+      <p class="artist-list">Includes Artists: Chainsmokers, Justin Bieber, Kaskade, Ariana Grande, Seven Lions, The Weeknd, Kygo</p>
+      <p class="h5">
+        Plan: Premium 
+      </p>
       <div style="background-color: orange" class="lyric-filter">
         <p>Lyrics Filter: orange</p>
       </div>
-
-      <div class="row space-between">
+      <div style="height: 3rem"></div>
+      <div class="row space-around">
         <a href="../../playlists/mega-jamz/" class="button">Previous</a>
+        <a href="../../playlists/" class="button">All</a>
         <a href="../../playlists/mass-appeal/" class="button">Next</a>
       </div>
+
     </div>
-
-
-
 
 
 
