--- a/playlists/now-pop/index.html
+++ b/playlists/now-pop/index.html
@@ -30,29 +30,28 @@
     <div class="jumbo-title">
       <h1 class="h3 inverse shadow">Now Pop</h1>
     </div>
-    <h2 class="h4">Confident Melodies</h2>
-    <h3 class="h5">
-       Plan: Starter 
-    </h3>
 
+    <h2 class="h4">Confident Melodies</h2>
 
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
-      <img src="../../playlists/generic-budgetlist.png">
-      <p>confident melodies, huge and perfectly pitched choruses and catchy hooks, offering a fresh and accessible contemporary sound.</p>
+      <img src="../../playlists/now-pop.png">
+      <p>Blending traditional pop with R&amp;B and EDM, Now Pop&#39;s polished and joyously bombastic sound is suited for fast paced businesses such as malls and casual restaurants. This is the kind of energetic and cheerful music that will cater to families as well as twentysomethings.<br><br></p>
       
+      <p class="h5">
+        
+      </p>
       <div style="background-color: " class="lyric-filter">
         <p></p>
       </div>
-
-      <div class="row space-between">
-        <a href="" class="button">Previous</a>
+      <div style="height: 3rem"></div>
+      <div class="row space-around">
+        <a href="../../playlists/smooth-lounge/" class="button">Previous</a>
+        <a href="../../playlists/" class="button">All</a>
         <a href="../../playlists/mega-jamz/" class="button">Next</a>
       </div>
+
     </div>
-
-
-
 
 
 
