--- a/playlists/ritmo-caliente/index.html
+++ b/playlists/ritmo-caliente/index.html
@@ -30,29 +30,28 @@
     <div class="jumbo-title">
       <h1 class="h3 inverse shadow">Ritmo Caliente</h1>
     </div>
-    <h2 class="h4">Latin Contemporary and Top 40</h2>
-    <h3 class="h5">
-      Plan: Premium 
-    </h3>
 
+    <h2 class="h4">Latin Contemporary and Top 40</h2>
 
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
       <img src="../../playlists/ritmo-caliente.png">
-      <p>The fusion of today&#39;s biggest pop performers with the best of English language and Spanish language songs. A culture-inclusive mix of what is happening in music today.</p>
-      <p>Includes Artists: Justin Bieber, Daddy Yankee, Fifth Harmony, Nicky Jam</p>
+      <p>The fusion of today&#39;s biggest pop performers with the best of English language and Spanish language songs. A culture-inclusive mix of what is happening in music today.<br><br></p>
+      <p class="artist-list">Includes Artists: Justin Bieber, Daddy Yankee, Fifth Harmony, Nicky Jam</p>
+      <p class="h5">
+        Plan: Premium 
+      </p>
       <div style="background-color: orange" class="lyric-filter">
         <p>Lyrics Filter: orange</p>
       </div>
-
-      <div class="row space-between">
+      <div style="height: 3rem"></div>
+      <div class="row space-around">
         <a href="../../playlists/my-favorite-hits/" class="button">Previous</a>
+        <a href="../../playlists/" class="button">All</a>
         <a href="../../playlists/star-stage/" class="button">Next</a>
       </div>
+
     </div>
-
-
-
 
 
 
