--- a/playlists/smooth-lounge/index.html
+++ b/playlists/smooth-lounge/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no shrink-to-fit=no">
-  <title>Mega Jamz</title>
+  <title>Smooth Lounge</title>
   <base href="">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   
@@ -28,27 +28,27 @@
 
   
     <div class="jumbo-title">
-      <h1 class="h3 inverse shadow">Mega Jamz</h1>
+      <h1 class="h3 inverse shadow">Smooth Lounge</h1>
     </div>
 
-    <h2 class="h4">Top 40 and Urban Contemporary</h2>
+    <h2 class="h4">Elegant</h2>
 
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
-      <img src="../../playlists/mega-jamz.png">
-      <p>This is where pop meets the street beat. Today&#39;s biggest pop hits along with today&#39;s urban hits, combined for a power playlist of hits for those needing an urban accent to their retail environment.<br><br></p>
-      <p class="artist-list">Includes Artists: The Weeknd, Flo Rida, Kanye West, Rihanna</p>
+      <img src="../../playlists/smooth-lounge.png">
+      <p>Smooth Lounge features elegant and low-key sounds in a modern format, including styles such as soft house, R&amp;B, nu-jazz and slick soul.<br><br>The channel provides a sophisticated and laid back feel, combining the polished sounds and subdued woozy textures that appeal to globetrotters in hotel bars and restaurants. Trendy and stylish, Smooth Lounge expresses desire as well as introspection.</p>
+      
       <p class="h5">
-        Plan: Premium 
+        
       </p>
-      <div style="background-color: orange" class="lyric-filter">
-        <p>Lyrics Filter: orange</p>
+      <div style="background-color: " class="lyric-filter">
+        <p></p>
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
-        <a href="../../playlists/now-pop/" class="button">Previous</a>
+        <a href="../../playlists/acoustic-dream/" class="button">Previous</a>
         <a href="../../playlists/" class="button">All</a>
-        <a href="../../playlists/top-beats/" class="button">Next</a>
+        <a href="../../playlists/now-pop/" class="button">Next</a>
       </div>
 
     </div>
