--- a/playlists/the-mix/index.html
+++ b/playlists/the-mix/index.html
@@ -30,29 +30,28 @@
     <div class="jumbo-title">
       <h1 class="h3 inverse shadow">The Mix</h1>
     </div>
-    <h2 class="h4">Adult Contemporary and Top 40</h2>
-    <h3 class="h5">
-      Plan: Premium 
-    </h3>
 
+    <h2 class="h4">Adult Contemporary and Top 40</h2>
 
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
       <img src="../../playlists/the-mix.png">
-      <p>Today&#39;s hottest hits appealing to adults 18-54 mixed with pop hits from the 90&#39;s and early 2k. This playlist has something for every pop music fan</p>
-      <p>Includes Artists: Ariana Grande, Michael Buble, Lady Gaga</p>
+      <p>Today&#39;s hottest hits appealing to adults 18-54 mixed with pop hits from the 90&#39;s and early 2k. This playlist has something for every pop music fan<br><br></p>
+      <p class="artist-list">Includes Artists: Ariana Grande, Michael Buble, Lady Gaga</p>
+      <p class="h5">
+        Plan: Premium 
+      </p>
       <div style="background-color: orange" class="lyric-filter">
         <p>Lyrics Filter: orange</p>
       </div>
-
-      <div class="row space-between">
+      <div style="height: 3rem"></div>
+      <div class="row space-around">
         <a href="../../playlists/star-stage/" class="button">Previous</a>
+        <a href="../../playlists/" class="button">All</a>
         <a href="" class="button">Next</a>
       </div>
+
     </div>
-
-
-
 
 
 
