added some more content to internal pages and changed some minor css

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
   <img src="images/transparent-blocks-3.png" alt="some seo friendly text here">
   <h1 class=h3>Get set up in 5 minutes or less with 100% business legal music for as low as $8.99/month!</h1>
   <h2 class="h5">Eliminate your business risk while paying music makers legal and fair compensation</h2>
-  <a href="./pricing" class="button">View Plans</a>
+  <a href="./pricing" class="button mt-30">View Plans</a>
 </section>
 
 
-  <div class="wrapper content">
+  <div class="wrapper center">
     <h2 class="h3">Protect and Grow your Business with Great Business Music</h2>
     <p>
       83% of small businesses across the US are subscribing to the wrong service for their business music.<br><br>
@@ -48,7 +48,7 @@
 
   <div class="business-music-plans">
     <h3 class="inverse">Business Music Plans:</h3>
-    <div class="wrapper">
+    <div class="wrapper mt-30">
       
       <div class="card-instance">
         <div class="card pricing-card on-light">
@@ -70,7 +70,7 @@
             <div class="card-details">
               <h3 class="h5">$18.99/month</h3>
               <p>Get all the benefits of our licensed business music solution. Select from a large range of playlists, get streaming solutions and more.</p>
-              <center>
+              <center class="mt-30">
                 <a class="button" href="./pricing/premium">Details</a>
                 <a class="button">Sign Up</a>
               </center>
@@ -81,8 +81,8 @@
   </div>
 
 
-  <div class="featured playlists">
-    <h3 class="inverse">Featured Playlists</h3>
+  <div class="featured-section">
+    <h3 class="inverse mb-40">Featured Playlists</h3>
 <div class="carousel-wrapper">
   <i class="fas fa-angle-right carousel-control carousel-next"></i>
   <i class="fas fa-angle-left carousel-control carousel-prev"></i>
@@ -214,7 +214,7 @@
   </div>
 
 
-    <div class="wrapper content">
+    <div class="wrapper center mb-30">
     <h2 class="h3">Ultra Secure Hardware Available</h2>
     <p>
       Playmore Music provides an excellent, easy and legal business music solution that can be linked to your existing hardware or business music delivery platform. However, our CUBE hardware offers some compelling advantages if you are looking for an ultimately secure and reliable business music player.
@@ -228,8 +228,8 @@
           <h2 class="h5">CUBE Physical Player</h2>
           <div class="card-details">
             <h3 class="h5">$199 once-off</h3>
-            <p>Although you can use your plan with the hardware you already own, upgrading to a CUBE player for your business music will provide you with superior security and reliability across the board.</p>
-            <center>
+            <p>An optional CUBE player for your business music will provide you with superior security and reliability across the board.</p>
+            <center class="mt-30">
               <a class="button" href="./pricing/cube-player">Details</a>
               <a class="button">Sign Up</a>
             </center>
