--- a/playlists/jazz-classics/index.html
+++ b/playlists/jazz-classics/index.html
@@ -36,7 +36,7 @@
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
       <img src="../../playlists/jazz-classics.png">
-      <p>These are some beautiful live recorded jazz tracks, playfully romantic and tailored to provide a magical dinnertime ambiance.<br><br></p>
+      <p>These are some beautiful live recorded jazz tracks, playfully romantic and tailored to provide a magical dinnertime ambiance.<br><br>optional</p>
       
       <p class="h5">
         
@@ -46,9 +46,9 @@
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
-        <a href="../../playlists/indie-days/" class="button">Previous</a>
-        <a href="../../playlists/" class="button">All</a>
-        <a href="../../playlists/acoustic-dream/" class="button">Next</a>
+        <a href="../../playlists/indie-days/" class="button btn-stack">Previous</a>
+        <a href="../../playlists/" class="button btn-stack">All</a>
+        <a href="../../playlists/acoustic-dream/" class="button btn-stack">Next</a>
       </div>
 
     </div>
