--- a/playlists/mass-appeal/index.html
+++ b/playlists/mass-appeal/index.html
@@ -36,7 +36,7 @@
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
       <img src="../../playlists/mass-appeal.png">
-      <p>If it’s new and now, it&#39;s on Mass Appeal. It features the most listened to, most downloaded, most wanted songs in this playlist full of back-to-back hits. Freshly picked chart-toppers delivered hot from the studios and stages by today’s pop artists.<br><br></p>
+      <p>If it’s new and now, it&#39;s on Mass Appeal. It features the most listened to, most downloaded, most wanted songs in this playlist full of back-to-back hits. Freshly picked chart-toppers delivered hot from the studios and stages by today’s pop artists.<br><br>optional</p>
       <p class="artist-list">Includes Artists: Sam Smith, Mark Ronson, Ed Sheeran, Nick Jonas, Maroon 5, Fall Out Boy, Kelly Clarkson, Hozier, Meghan Trainor</p>
       <p class="h5">
         Plan: Premium 
@@ -46,9 +46,9 @@
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
-        <a href="../../playlists/top-beats/" class="button">Previous</a>
-        <a href="../../playlists/" class="button">All</a>
-        <a href="../../playlists/my-favorite-hits/" class="button">Next</a>
+        <a href="../../playlists/top-beats/" class="button btn-stack">Previous</a>
+        <a href="../../playlists/" class="button btn-stack">All</a>
+        <a href="../../playlists/my-favorite-hits/" class="button btn-stack">Next</a>
       </div>
 
     </div>
