--- a/playlists/ritmo-caliente/index.html
+++ b/playlists/ritmo-caliente/index.html
@@ -36,7 +36,7 @@
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
       <img src="../../playlists/ritmo-caliente.png">
-      <p>The fusion of today&#39;s biggest pop performers with the best of English language and Spanish language songs. A culture-inclusive mix of what is happening in music today.<br><br></p>
+      <p>The fusion of today&#39;s biggest pop performers with the best of English language and Spanish language songs. A culture-inclusive mix of what is happening in music today.<br><br>optional</p>
       <p class="artist-list">Includes Artists: Justin Bieber, Daddy Yankee, Fifth Harmony, Nicky Jam</p>
       <p class="h5">
         Plan: Premium 
@@ -46,9 +46,9 @@
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
-        <a href="../../playlists/my-favorite-hits/" class="button">Previous</a>
-        <a href="../../playlists/" class="button">All</a>
-        <a href="../../playlists/star-stage/" class="button">Next</a>
+        <a href="../../playlists/my-favorite-hits/" class="button btn-stack">Previous</a>
+        <a href="../../playlists/" class="button btn-stack">All</a>
+        <a href="../../playlists/star-stage/" class="button btn-stack">Next</a>
       </div>
 
     </div>
