--- a/playlists/smooth-lounge/index.html
+++ b/playlists/smooth-lounge/index.html
@@ -46,9 +46,9 @@
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
-        <a href="../../playlists/acoustic-dream/" class="button">Previous</a>
-        <a href="../../playlists/" class="button">All</a>
-        <a href="../../playlists/now-pop/" class="button">Next</a>
+        <a href="../../playlists/acoustic-dream/" class="button btn-stack">Previous</a>
+        <a href="../../playlists/" class="button btn-stack">All</a>
+        <a href="../../playlists/now-pop/" class="button btn-stack">Next</a>
       </div>
 
     </div>
