--- a/playlists/star-stage/index.html
+++ b/playlists/star-stage/index.html
@@ -36,7 +36,7 @@
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
       <img src="../../playlists/star-stage.png">
-      <p>Today&#39;s alternative and Indie stars join today&#39;s pop chart-toppers, all in one playlist. It&#39;s the best of both worlds.<br><br></p>
+      <p>Today&#39;s alternative and Indie stars join today&#39;s pop chart-toppers, all in one playlist. It&#39;s the best of both worlds.<br><br>optional</p>
       <p class="artist-list">Includes Artists: Fitz and the Tantrums, Twenty One Pilots, Chvrches, Ariana Grande, Justin Bieber, Beyonce</p>
       <p class="h5">
         Plan: Premium 
@@ -46,9 +46,9 @@
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
-        <a href="../../playlists/ritmo-caliente/" class="button">Previous</a>
-        <a href="../../playlists/" class="button">All</a>
-        <a href="../../playlists/the-mix/" class="button">Next</a>
+        <a href="../../playlists/ritmo-caliente/" class="button btn-stack">Previous</a>
+        <a href="../../playlists/" class="button btn-stack">All</a>
+        <a href="../../playlists/the-mix/" class="button btn-stack">Next</a>
       </div>
 
     </div>
