--- a/playlists/top-beats/index.html
+++ b/playlists/top-beats/index.html
@@ -36,7 +36,7 @@
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
       <img src="../../playlists/top-beats.png">
-      <p>Chart-topping pop hits of today along with the fresh beats of the best dance tracks. New, now and full of energy.<br><br></p>
+      <p>Chart-topping pop hits of today along with the fresh beats of the best dance tracks. New, now and full of energy.<br><br>optional</p>
       <p class="artist-list">Includes Artists: Chainsmokers, Justin Bieber, Kaskade, Ariana Grande, Seven Lions, The Weeknd, Kygo</p>
       <p class="h5">
         Plan: Premium 
@@ -46,9 +46,9 @@
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
-        <a href="../../playlists/mega-jamz/" class="button">Previous</a>
-        <a href="../../playlists/" class="button">All</a>
-        <a href="../../playlists/mass-appeal/" class="button">Next</a>
+        <a href="../../playlists/mega-jamz/" class="button btn-stack">Previous</a>
+        <a href="../../playlists/" class="button btn-stack">All</a>
+        <a href="../../playlists/mass-appeal/" class="button btn-stack">Next</a>
       </div>
 
     </div>
