--- a/playlists/mega-jamz/index.html
+++ b/playlists/mega-jamz/index.html
@@ -36,7 +36,7 @@
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
       <img src="../../playlists/mega-jamz.png">
-      <p>This is where pop meets the street beat. Today&#39;s biggest pop hits along with today&#39;s urban hits, combined for a power playlist of hits for those needing an urban accent to their retail environment.<br><br></p>
+      <p>This is where pop meets the street beat. Today&#39;s biggest pop hits along with today&#39;s urban hits, combined for a power playlist of hits for those needing an urban accent to their retail environment.<br><br>optional</p>
       <p class="artist-list">Includes Artists: The Weeknd, Flo Rida, Kanye West, Rihanna</p>
       <p class="h5">
         Plan: Premium 
@@ -46,9 +46,9 @@
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
-        <a href="../../playlists/now-pop/" class="button">Previous</a>
-        <a href="../../playlists/" class="button">All</a>
-        <a href="../../playlists/top-beats/" class="button">Next</a>
+        <a href="../../playlists/now-pop/" class="button btn-stack">Previous</a>
+        <a href="../../playlists/" class="button btn-stack">All</a>
+        <a href="../../playlists/top-beats/" class="button btn-stack">Next</a>
       </div>
 
     </div>
