--- a/playlists/my-favorite-hits/index.html
+++ b/playlists/my-favorite-hits/index.html
@@ -36,7 +36,7 @@
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
       <img src="../../playlists/my-favorite-hits.png">
-      <p>My Favorite Hits is an upbeat mix of today’s hit music for adults, plus songs from the 80’s and 90’s that sound fresh and relevant. This playlist is audience-tested to ensure adults 25&#43; will enjoy every song. Our most popular playlist!<br><br></p>
+      <p>My Favorite Hits is an upbeat mix of today’s hit music for adults, plus songs from the 80’s and 90’s that sound fresh and relevant. This playlist is audience-tested to ensure adults 25&#43; will enjoy every song. Our most popular playlist!<br><br>optional</p>
       <p class="artist-list">Includes Artists: Taylor Swift, John Legend, Kelly Clarkson, Train, Katy Perry</p>
       <p class="h5">
         Plan: Premium 
@@ -46,9 +46,9 @@
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
-        <a href="../../playlists/mass-appeal/" class="button">Previous</a>
-        <a href="../../playlists/" class="button">All</a>
-        <a href="../../playlists/ritmo-caliente/" class="button">Next</a>
+        <a href="../../playlists/mass-appeal/" class="button btn-stack">Previous</a>
+        <a href="../../playlists/" class="button btn-stack">All</a>
+        <a href="../../playlists/ritmo-caliente/" class="button btn-stack">Next</a>
       </div>
 
     </div>
