--- a/playlists/now-pop/index.html
+++ b/playlists/now-pop/index.html
@@ -36,7 +36,7 @@
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
       <img src="../../playlists/now-pop.png">
-      <p>Blending traditional pop with R&amp;B and EDM, Now Pop&#39;s polished and joyously bombastic sound is suited for fast paced businesses such as malls and casual restaurants. This is the kind of energetic and cheerful music that will cater to families as well as twentysomethings.<br><br></p>
+      <p>Blending traditional pop with R&amp;B and EDM, Now Pop&#39;s polished and joyously bombastic sound is suited for fast paced businesses such as malls and casual restaurants. This is the kind of energetic and cheerful music that will cater to families as well as twentysomethings.<br><br>optional</p>
       
       <p class="h5">
         
@@ -46,9 +46,9 @@
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
-        <a href="../../playlists/smooth-lounge/" class="button">Previous</a>
-        <a href="../../playlists/" class="button">All</a>
-        <a href="../../playlists/mega-jamz/" class="button">Next</a>
+        <a href="../../playlists/smooth-lounge/" class="button btn-stack">Previous</a>
+        <a href="../../playlists/" class="button btn-stack">All</a>
+        <a href="../../playlists/mega-jamz/" class="button btn-stack">Next</a>
       </div>
 
     </div>
