--- a/playlists/the-mix/index.html
+++ b/playlists/the-mix/index.html
@@ -36,7 +36,7 @@
     <div class="wrapper single-playlist-wrapper wrapper-col">
 
       <img src="../../playlists/the-mix.png">
-      <p>Today&#39;s hottest hits appealing to adults 18-54 mixed with pop hits from the 90&#39;s and early 2k. This playlist has something for every pop music fan<br><br></p>
+      <p>Today&#39;s hottest hits appealing to adults 18-54 mixed with pop hits from the 90&#39;s and early 2k. This playlist has something for every pop music fan<br><br>optional</p>
       <p class="artist-list">Includes Artists: Ariana Grande, Michael Buble, Lady Gaga</p>
       <p class="h5">
         Plan: Premium 
@@ -46,9 +46,9 @@
       </div>
       <div style="height: 3rem"></div>
       <div class="row space-around">
-        <a href="../../playlists/star-stage/" class="button">Previous</a>
-        <a href="../../playlists/" class="button">All</a>
-        <a href="" class="button">Next</a>
+        <a href="../../playlists/star-stage/" class="button btn-stack">Previous</a>
+        <a href="../../playlists/" class="button btn-stack">All</a>
+        <a href="" class="button btn-stack">Next</a>
       </div>
 
     </div>
